test/files/invalid/enum_without_type.fbs
enum Foo { X = 0 }